# voiceflow

./: .gitignore  README.md
apps/agent/: main.py  pyproject.toml
apps/backend/: main.py  pyproject.toml
apps/backend/routers/: calls.py  contacts.py  health.py
apps/frontend/: package.json
apps/python/: .env.example  pyproject.toml
apps/python/agent/: pyproject.toml
apps/python/agent/src/voice_flow_agent/: agent.py  main.py  utils.py
apps/python/backend/: pyproject.toml
apps/python/backend/src/voice_flow_backend/: main.py
apps/python/backend/src/voice_flow_backend/routers/: calls.py  contacts.py
apps/python/shared/: pyproject.toml
apps/python/shared/src/voice_flow_shared/: db.py  models.py  prompt.py
apps/python/testing/: pyproject.toml
apps/python/testing/src/voice_flow_testing/: llm.py  main.py  models.py  router.py
apps/web/: README.md  package-lock.json  package.json  vite.config.mts
apps/web/src/: App.tsx  vite-env.d.ts
apps/web/src/components/: Modal.tsx  SearchBar.tsx
apps/web/src/pages/: CallsTab.tsx  ContactsTab.tsx
apps/web/voice-flow-agent-platform/: index.html  tsconfig.json
apps/web/voice-flow-agent-platform/src/: index.css
apps/web/voice-flow-agent-platform/src/components/: Pagination.tsx  TabNavigation.tsx
apps/web/voice-flow-agent-platform/src/pages/: AttemptDetail.tsx  ContactDetail.tsx
apps/web/voice-flow-agent-platform/src/types/: index.ts
apps/web/voice-flow-agent-platform/src/utils/: api.ts
apps/web/voice-flow-testing-platform/: eslint.config.js  package-lock.json  package.json
apps/web/voice-flow-testing-platform/src/: App.tsx
apps/web/voice-flow-testing-platform/src/components/: GeneratePersonaModal.tsx  Layout.tsx  LiveTesting.tsx  PersonaDetail.tsx  PersonasTab.tsx  TestDetail.tsx  TestsTab.tsx
apps/web/voice-flow-testing-platform/src/services/: api.ts
shared/: __init__.py  db.py  models.py
